--- a/src/index.css
+++ b/src/index.css
@@ -3,71 +3,71 @@
 @tailwind utilities;
 
 :root {
-  --text: #0a111f;
-  --background: #f3f6fc;
-  --primary: #3b77de;
-  --secondary: #7da6f2;
-  --accent: #4986f8;
+  --text: #0d0109;
+  --background: #fdeff9;
+  --primary: #e71ba3;
+  --secondary: #f19b77;
+  --accent: #edb157;
 
-  --text-50: #ecf0f9;
-  --text-100: #d8e1f3;
-  --text-200: #b2c3e6;
-  --text-300: #8ba5da;
-  --text-400: #6588cd;
-  --text-500: #3e6ac1;
-  --text-600: #32559a;
-  --text-700: #253f74;
-  --text-800: #192a4d;
-  --text-900: #0c1527;
-  --text-950: #060b13;
+  --text-50: #fde7f6;
+  --text-100: #fbd0ed;
+  --text-200: #f8a0db;
+  --text-300: #f471c8;
+  --text-400: #f141b6;
+  --text-500: #ed12a4;
+  --text-600: #be0e83;
+  --text-700: #8e0b62;
+  --text-800: #5f0742;
+  --text-900: #2f0421;
+  --text-950: #180210;
 
-  --background-50: #ebf0fa;
-  --background-100: #d6e0f5;
-  --background-200: #adc2eb;
-  --background-300: #85a3e0;
-  --background-400: #5c85d6;
-  --background-500: #3366cc;
-  --background-600: #2952a3;
-  --background-700: #1f3d7a;
-  --background-800: #142952;
-  --background-900: #0a1429;
-  --background-950: #050a14;
+  --background-50: #fce8f7;
+  --background-100: #f9d2ee;
+  --background-200: #f4a4dd;
+  --background-300: #ee77cc;
+  --background-400: #e949bb;
+  --background-500: #e31cab;
+  --background-600: #b61688;
+  --background-700: #881166;
+  --background-800: #5b0b44;
+  --background-900: #2d0622;
+  --background-950: #170311;
 
-  --primary-50: #e9f0fb;
-  --primary-100: #d3e1f8;
-  --primary-200: #a8c2f0;
-  --primary-300: #7ca4e9;
-  --primary-400: #5186e1;
-  --primary-500: #2567da;
-  --primary-600: #1e53ae;
-  --primary-700: #163e83;
-  --primary-800: #0f2957;
-  --primary-900: #07152c;
-  --primary-950: #040a16;
+  --primary-50: #fde8f6;
+  --primary-100: #fad1ec;
+  --primary-200: #f5a3da;
+  --primary-300: #f075c7;
+  --primary-400: #ec46b5;
+  --primary-500: #e718a2;
+  --primary-600: #b91382;
+  --primary-700: #8a0f61;
+  --primary-800: #5c0a41;
+  --primary-900: #2e0520;
+  --primary-950: #170210;
 
-  --secondary-50: #e8effd;
-  --secondary-100: #d1dffa;
-  --secondary-200: #a2bff6;
-  --secondary-300: #74a0f1;
-  --secondary-400: #4580ed;
-  --secondary-500: #1760e8;
-  --secondary-600: #124dba;
-  --secondary-700: #0e3a8b;
-  --secondary-800: #09265d;
-  --secondary-900: #05132e;
-  --secondary-950: #020a17;
+  --secondary-50: #fdeee8;
+  --secondary-100: #faddd1;
+  --secondary-200: #f5bba3;
+  --secondary-300: #f09a75;
+  --secondary-400: #ec7846;
+  --secondary-500: #e75618;
+  --secondary-600: #b94513;
+  --secondary-700: #8a340f;
+  --secondary-800: #5c220a;
+  --secondary-900: #2e1105;
+  --secondary-950: #170902;
 
-  --accent-50: #e6effe;
-  --accent-100: #cedefd;
-  --accent-200: #9dbefb;
-  --accent-300: #6b9dfa;
-  --accent-400: #3a7df8;
-  --accent-500: #095cf6;
-  --accent-600: #074ac5;
-  --accent-700: #053794;
-  --accent-800: #042562;
-  --accent-900: #021231;
-  --accent-950: #010919;
+  --accent-50: #fdf4e8;
+  --accent-100: #faead1;
+  --accent-200: #f5d4a3;
+  --accent-300: #f0bf75;
+  --accent-400: #ecaa46;
+  --accent-500: #e79418;
+  --accent-600: #b97713;
+  --accent-700: #8a590f;
+  --accent-800: #5c3b0a;
+  --accent-900: #2e1e05;
+  --accent-950: #170f02;
 }
 
 :root {
@@ -116,5 +116,30 @@ small {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+ul li::before {
+  content: "•";
+  margin-right: 5px;
+}
+
+a:link {
+  color: var(--secondary-500);
+  text-decoration: underline;
+}
+
+a:visited {
+  color: var(--secondary-500);
+  text-decoration: underline;
+}
+
+a:hover {
+  color: var(--secondary-500);
+  text-decoration: none;
+}
+
+a:active {
+  color: var(--secondary-500);
+  text-decoration: none;
 }
 
