--- a/src/index.css
+++ b/src/index.css
@@ -3,80 +3,80 @@
 @tailwind utilities;
 
 :root {
-  --text: #0d0109;
-  --background: #fdeff9;
-  --primary: #e71ba3;
-  --secondary: #f19b77;
-  --accent: #edb157;
+    --text: #0d0109;
+    --background: #fdeff9;
+    --primary: #e71ba3;
+    --secondary: #f19b77;
+    --accent: #edb157;
 
-  --text-50: #fde7f6;
-  --text-100: #fbd0ed;
-  --text-200: #f8a0db;
-  --text-300: #f471c8;
-  --text-400: #f141b6;
-  --text-500: #ed12a4;
-  --text-600: #be0e83;
-  --text-700: #8e0b62;
-  --text-800: #5f0742;
-  --text-900: #2f0421;
-  --text-950: #180210;
+    --text-50: #fde7f6;
+    --text-100: #fbd0ed;
+    --text-200: #f8a0db;
+    --text-300: #f471c8;
+    --text-400: #f141b6;
+    --text-500: #ed12a4;
+    --text-600: #be0e83;
+    --text-700: #8e0b62;
+    --text-800: #5f0742;
+    --text-900: #2f0421;
+    --text-950: #180210;
 
-  --background-50: #fce8f7;
-  --background-100: #f9d2ee;
-  --background-200: #f4a4dd;
-  --background-300: #ee77cc;
-  --background-400: #e949bb;
-  --background-500: #e31cab;
-  --background-600: #b61688;
-  --background-700: #881166;
-  --background-800: #5b0b44;
-  --background-900: #2d0622;
-  --background-950: #170311;
+    --background-50: #fce8f7;
+    --background-100: #f9d2ee;
+    --background-200: #f4a4dd;
+    --background-300: #ee77cc;
+    --background-400: #e949bb;
+    --background-500: #e31cab;
+    --background-600: #b61688;
+    --background-700: #881166;
+    --background-800: #5b0b44;
+    --background-900: #2d0622;
+    --background-950: #170311;
 
-  --primary-50: #fde8f6;
-  --primary-100: #fad1ec;
-  --primary-200: #f5a3da;
-  --primary-300: #f075c7;
-  --primary-400: #ec46b5;
-  --primary-500: #e718a2;
-  --primary-600: #b91382;
-  --primary-700: #8a0f61;
-  --primary-800: #5c0a41;
-  --primary-900: #2e0520;
-  --primary-950: #170210;
+    --primary-50: #fde8f6;
+    --primary-100: #fad1ec;
+    --primary-200: #f5a3da;
+    --primary-300: #f075c7;
+    --primary-400: #ec46b5;
+    --primary-500: #e718a2;
+    --primary-600: #b91382;
+    --primary-700: #8a0f61;
+    --primary-800: #5c0a41;
+    --primary-900: #2e0520;
+    --primary-950: #170210;
 
-  --secondary-50: #fdeee8;
-  --secondary-100: #faddd1;
-  --secondary-200: #f5bba3;
-  --secondary-300: #f09a75;
-  --secondary-400: #ec7846;
-  --secondary-500: #e75618;
-  --secondary-600: #b94513;
-  --secondary-700: #8a340f;
-  --secondary-800: #5c220a;
-  --secondary-900: #2e1105;
-  --secondary-950: #170902;
+    --secondary-50: #fdeee8;
+    --secondary-100: #faddd1;
+    --secondary-200: #f5bba3;
+    --secondary-300: #f09a75;
+    --secondary-400: #ec7846;
+    --secondary-500: #e75618;
+    --secondary-600: #b94513;
+    --secondary-700: #8a340f;
+    --secondary-800: #5c220a;
+    --secondary-900: #2e1105;
+    --secondary-950: #170902;
 
-  --accent-50: #fdf4e8;
-  --accent-100: #faead1;
-  --accent-200: #f5d4a3;
-  --accent-300: #f0bf75;
-  --accent-400: #ecaa46;
-  --accent-500: #e79418;
-  --accent-600: #b97713;
-  --accent-700: #8a590f;
-  --accent-800: #5c3b0a;
-  --accent-900: #2e1e05;
-  --accent-950: #170f02;
+    --accent-50: #fdf4e8;
+    --accent-100: #faead1;
+    --accent-200: #f5d4a3;
+    --accent-300: #f0bf75;
+    --accent-400: #ecaa46;
+    --accent-500: #e79418;
+    --accent-600: #b97713;
+    --accent-700: #8a590f;
+    --accent-800: #5c3b0a;
+    --accent-900: #2e1e05;
+    --accent-950: #170f02;
 }
 
 :root {
-  background: var(--background);
+    background: var(--background);
 }
 
 body {
-  font-family: Rubik, sans-serif;
-  font-weight: 400;
+    font-family: Rubik, sans-serif;
+    font-weight: 400;
 }
 
 h1,
@@ -84,71 +84,70 @@ h2,
 h3,
 h4,
 h5 {
-  font-weight: 500;
+    font-weight: 500;
 }
 
 h1 {
-  font-size: 3.366rem; /* 53.92px */
+    font-size: 3.366rem; /* 53.92px */
 }
 
 h2 {
-  font-size: 2.525rem; /* 40.32px */
+    font-size: 2.525rem; /* 40.32px */
 }
 
 h3 {
-  font-size: 1.894rem; /* 30.24px */
+    font-size: 1.894rem; /* 30.24px */
 }
 
 h4 {
-  font-size: 1.421rem; /* 22.72px */
+    font-size: 1.421rem; /* 22.72px */
 }
 
 h5 {
-  font-size: 1.066rem; /* 17.12px */
+    font-size: 1.066rem; /* 17.12px */
 }
 
 small {
-  font-size: 0.6rem; /* 9.6px */
+    font-size: 0.6rem; /* 9.6px */
 }
 
 .color-effect {
-  background: linear-gradient(120deg, var(--primary), var(--accent));
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+    background: linear-gradient(120deg, var(--primary), var(--accent));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-ul li::before {
-  content: "•";
-  margin-right: 5px;
+ul {
+    list-style-type: disc;
 }
 
-li li::before {
-  content: "-";
-  margin-right: 5px;
+ol {
+    list-style-type: decimal;
 }
 
-ul ul {
-  padding-inline-start: 40px;
+ul,
+ol {
+    margin-left: 20px;
 }
 
 a:link {
-  color: var(--secondary-500);
-  text-decoration: underline;
+    color: var(--secondary-500);
+    text-decoration: underline;
 }
 
 a:visited {
-  color: var(--secondary-500);
-  text-decoration: underline;
+    color: var(--secondary-500);
+    text-decoration: underline;
 }
 
 a:hover {
-  color: var(--secondary-500);
-  text-decoration: none;
+    color: var(--secondary-500);
+    text-decoration: none;
 }
 
 a:active {
-  color: var(--secondary-500);
-  text-decoration: none;
+    color: var(--secondary-500);
+    text-decoration: none;
 }
 
