--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
 
     --primary-50: #fde8f6;
     --primary-100: #fad1ec;
-    --primary-200: #f5a3da;
+    --primary-200: #f8a8dd;
     --primary-300: #f075c7;
     --primary-400: #ec46b5;
     --primary-500: #e718a2;
@@ -46,8 +46,8 @@
     --primary-950: #170210;
 
     --secondary-50: #fdeee8;
-    --secondary-100: #faddd1;
-    --secondary-200: #f5bba3;
+    --secondary-100: #f7ccc7;
+    --secondary-200: #f5aba3;
     --secondary-300: #f09a75;
     --secondary-400: #ec7846;
     --secondary-500: #e75618;
